# linux-commander

./: .gitignore  Cargo.toml  README.md  build.rs  commander.sln  de.uriegel.commander.gschema.xml  eslint.config.js  index.html  main.glade  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
Commander/: Actions.cs  Bounds.cs  Commander.csproj  CopyProcessor.cs  DirectoryProcessing.cs  DirectoryProcessor.cs  Drives.cs  ExifReader.cs  FileServing.cs  History.cs  Json.cs  MainWindow.cs  MainWindow.xaml  MainWindow.xaml.cs  MemoryTestItem.cs  Process.cs  ProcessingQueue.cs  Program.cs  ProgressEventArgs.cs  Requests.cs  RootProcessor.cs  TrackInfo.cs  Viewer.cs  WebRequests.cs  WebServer.cs
Commander/Controllers/: Cancellations.cs  ConflictController.cs  Controller.cs  ControllerBase.cs  CopyProcessor.cs  Root.cs  (+10 more)
Gtk4DotNet/: AdwAlertDialog.cs  AdwApplicationWindow.cs  AdwDialog.cs  Application.cs  ApplicationWindow.cs  Banner.cs  Box.cs  Builder.cs  Button.cs  Cairo.cs  Cancellable.cs  CheckButton.cs  ColumnView.cs  ColumnViewColumn.cs  ComboBoxText.cs  ContentProvider.cs  ContentType.cs  CssProvider.cs  CustomFilter.cs  CustomSorter.cs  Device.cs  Dialog.cs  Display.cs  DragContext.cs  DrawingArea.cs  EditableLabel.cs  Entry.cs  EventControllerFocus.cs  EventControllerKey.cs  FilterListModel.cs  FontButton.cs  GBytes.cs  GFile.cs  GObject.cs  GType.cs  GValue.cs  GdkSeat.cs  GestureClick.cs  Gtk.cs  Gtk4DotNet.csproj  (+48 more)
resources/: main_window.glade  resources.xml
scripts/: folder.js  global.js  index.js  jobs.js  viewer.js
src/: App.css  App.tsx  Commander.tsx  actions.rs  activerequests.rs  app.rs  eventsink.rs  gtk_async.rs  history.ts  index.css  iteratorext.rs  main.rs  mainwindow.rs  msgcallback.rs  progress.rs  requestdata.rs  requests.rs  server.rs  settings.rs  warp.rs  webview.rs
styles/: style.css
website/: globals.js  index.html  script.js  style.css
(+282 files in other folders)
