[package]
name = "commander"
version = "0.1.0"
authors = ["uwe"]
edition = "2018"

[dependencies]
gtk = "0.14"
gio = "0.14"
glib = "0.14"
urlencoding = "2.1"
webkit2gtk = "0.14"
async-std = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
async-process = "1.1"
dirs = "3.0"
lexical-sort = "0.3"
systemicons = "0.4"
warp = "0.3"
warp-range = "0.1"
kamadak-exif = "0.5"

[profile.release]
panic = 'abort'